# BabelScore

./: .env.example  .gitignore  BabelScore_Claude_brainstorm_summary.md  CLAUDE.md  README.md  README_draft.md  main.py  pyproject.toml  tech_stack.md
_DOCS/: TUI_functionality.md  TUI_slash_commands.md  tech_stack.md
babelscore/cli/: init_wizard.py  main.py  shell.py
babelscore/config/: project.py
docs/plans/: 2026-03-08-init-wizard-design.md  2026-03-08-init-wizard.md  2026-03-08-tui-milestone-1.md  2026-03-09-init-provider-select-design.md  2026-03-09-init-provider-select.md
tests/: test_init_wizard.py  test_project.py  test_shell.py
