[project]
name = "babelscore"
version = "0.1.0"
description = "Score the translation capability of any LLM. A reproducible, LLM-as-judge based translation quality metric."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
]

[project.scripts]
babelscore = "babelscore.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
